VODモーダルUI: 配信中のVOD見出しの色修正・重複排除・TMDBセクション削除・注意書き配置調整・全体コンパクト化

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
+    "justwatch-api": "^1.0.7",
     "next": "^15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
